--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -186,9 +186,9 @@ BACK_PAGE: "<🔘"
 
 S_B_1 : "❣️ 𝐀ᴅᴅ 𝐌ᴇ 𝐁ᴧʙʏ ❣️"
 S_B_2 : "🍁 𝐂𝐇𝐀𝐓 𝐆𝐏 🍁"
-S_B_3 : "🤫 𝑀𝑅 𝑈𝑁𝐸𝑋 MEMMBER 🤫"
+S_B_3 : "🤫 ᴀᴅᴅ ᴍᴇ ʙᴀʙʏ 🤫"
 S_B_4 : "•─╼⃝𖠁 𝐇ᴇʟᴘ 𝐀иᴅ 𝐂ᴏᴍᴍᴧɴᴅs 𖠁⃝╾─•"
-S_B_5 : "𝑀𝑅 𝑈𝑁𝐸𝑋😈࿐"
+S_B_5 : "𝙊𝙒𝙉𝙀𝙍😈࿐"
 S_B_6 : "🍁 𝐂𝐇𝐀𝐍𝐍𝐄𝐋 🍁"
 S_B_7 : "🍡 𝐒ᴏᴜꝛᴄᴇ 🍡"
 S_B_8 : "📺 𝐘ᴏᴜ-𝐓ᴜʙᴇ 📺"
