--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,13 +85,13 @@ admin_39 : "» ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "{0}🍹 ɪs ᴀʟɪᴠᴇ .\n\n<b>🕸️ ᴜᴘᴛɪᴍᴇ :</b> {1}"
-start_2 : "нєу {0},\n\n๏ ᴛʜɪs ɪs {1} !\n\n⚡️ ꜱᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs ᴀʀᴇ\n━━━━━━━━━━━━━━━━𓆩𔘓⃭𓆪\n━━━━━━━━━━━\n ◆ ʏᴏᴜ ᴄᴀɴ ᴘʟᴀʏ ꜱᴏɴɢꜱ ɪɴ ᴠᴏɪᴄᴇ ᴄʜᴀᴛ.\n ◆ ʏᴏᴜ ᴄᴀɴ ɢᴇɴᴇʀᴀᴛᴏʀ ɪᴍᴀɢᴇs.\n ◆ ʏᴏᴜ ᴄᴀɴ ᴛʀᴀɴꜱʟᴀᴛᴇ ᴍᴜʟᴛɪᴘʟᴇ ʟᴀɴɢᴜᴀɢᴇꜱ.\n ◆ ɪ ᴄᴀɴ ᴍᴜᴛᴇ,ᴜɴᴍᴜᴛᴇ,ʙᴀɴ,ᴜɴʙᴀɴ,ᴋɪᴄᴋ..\n ◆ ꜱᴘᴇᴄɪᴀʟ ᴡᴇʟᴄᴏᴍᴇ\n ◆ ᴍᴏʀᴇ ғᴇᴀᴛᴜʀᴇs ᴄʟɪᴄᴋ\nᴄᴏᴍᴍᴀɴᴅs ʙᴜᴛᴛᴏɴ...\n \n ➻ ᴀ ғᴀsᴛ & ᴘᴏᴡᴇʀғᴜʟ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ ʙᴏᴛ ᴡɪᴛʜ sᴏᴍᴇ ᴀᴡᴇsᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs.\n\nSᴜᴘᴘᴏʀᴛᴇᴅ Pʟᴀᴛғᴏʀᴍs : ʏᴏᴜᴛᴜʙᴇ, sᴘᴏᴛɪғʏ, ʀᴇssᴏ, ᴀᴘᴘʟᴇ ᴍᴜsɪᴄ ᴀɴᴅ sᴏᴜɴᴅᴄʟᴏᴜᴅ.\n━━━━━━━━━━━\n━━━━━━━━━━━━━━━━𓆩𔘓⃭𓆪\n๏ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀʙᴏᴜᴛ ᴍʏ ᴍᴏᴅᴜʟᴇs ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs.  [𝐂ʟɪᴄᴋ 𝐇ᴇʀᴇ](https://t.me/itz_ind_coder) ♡\n"
+start_2 : "нєу {0},\n\n๏ ᴛʜɪs ɪs {1} !\n\n⚡️ ꜱᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs ᴀʀᴇ\n━━━━━━━━━━━━━━━━𓆩𔘓⃭𓆪\n━━━━━━━━━━━\n ◆ ʏᴏᴜ ᴄᴀɴ ᴘʟᴀʏ ꜱᴏɴɢꜱ ɪɴ ᴠᴏɪᴄᴇ ᴄʜᴀᴛ.\n ◆ ʏᴏᴜ ᴄᴀɴ ɢᴇɴᴇʀᴀᴛᴏʀ ɪᴍᴀɢᴇs.\n ◆ ʏᴏᴜ ᴄᴀɴ ᴛʀᴀɴꜱʟᴀᴛᴇ ᴍᴜʟᴛɪᴘʟᴇ ʟᴀɴɢᴜᴀɢᴇꜱ.\n ◆ ɪ ᴄᴀɴ ᴍᴜᴛᴇ,ᴜɴᴍᴜᴛᴇ,ʙᴀɴ,ᴜɴʙᴀɴ,ᴋɪᴄᴋ..\n ◆ ꜱᴘᴇᴄɪᴀʟ ᴡᴇʟᴄᴏᴍᴇ\n ◆ ᴍᴏʀᴇ ғᴇᴀᴛᴜʀᴇs ᴄʟɪᴄᴋ\nᴄᴏᴍᴍᴀɴᴅs ʙᴜᴛᴛᴏɴ...\n \n ➻ ᴀ ғᴀsᴛ & ᴘᴏᴡᴇʀғᴜʟ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ ʙᴏᴛ ᴡɪᴛʜ sᴏᴍᴇ ᴀᴡᴇsᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs.\n\n● ᴘʏᴛʜᴏɴ ➥ 3.10.11\n● ᴘʏʀᴏɢʀᴀᴍ ➥ 2.0.106\n● ᴘʏ-ᴛɢᴄᴀʟʟs ➥ 0.9.7\n\nSᴜᴘᴘᴏʀᴛᴇᴅ Pʟᴀᴛғᴏʀᴍs : ʏᴏᴜᴛᴜʙᴇ, sᴘᴏᴛɪғʏ, ʀᴇssᴏ, ᴀᴘᴘʟᴇ ᴍᴜsɪᴄ ᴀɴᴅ sᴏᴜɴᴅᴄʟᴏᴜᴅ.\n━━━━━━━━━━━\n━━━━━━━━━━━━━━━━𓆩𔘓⃭𓆪\n๏ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀʙᴏᴜᴛ ᴍʏ ᴍᴏᴅᴜʟᴇs ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs.  [𝐂ʟɪᴄᴋ 𝐇ᴇʀᴇ](https://t.me/itz_ind_coder) ♡\n"
 start_3 : "𝐇ᴇʏ {0},\n𝐓ʜɪs 𝐈s {1}\n\n𝐓ʜᴀɴᴋs 𝐅ᴏʀ 𝐀ᴅᴅɪɴɢ 𝐌ᴇ 𝐈ɴ {2}, {3} 𝐂ᴀɴ 𝐍ᴏᴡ 𝐏ʟᴀʏ 𝐒ᴏɴɢs 𝐈ɴ 𝐓ʜɪs 𝐂ʜᴀᴛ."
 start_4 : "🎄 <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> 🎄\n\nᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ.\n\n<b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "<b>↝ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴀᴛ ɪs ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴀᴛᴀʙᴀsᴇ.\nʀᴇǫᴜᴇsᴛ ᴀ <a href={1}>sᴜᴅᴏ ᴜsᴇʀ</a> ᴛᴏ ᴜɴʙʟᴀᴄᴋʟɪsᴛ ʏᴏᴜʀ ᴄʜᴀᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ.</a>"
 start_6 : "侖 <b>ᴛʀᴀᴄᴋ ɪɴғᴏʀᴍᴀᴛɪᴏɴ</b> 侖\n\n侖 <b>ᴛɪᴛʟᴇ :</b> {0}\n\n侖 <b>ᴅᴜʀᴀᴛɪᴏɴ :</b> {1} ᴍɪɴᴜᴛᴇs\n侖 <b>ᴠɪᴇᴡs :</b> <code>{2}</code>\n侖 <b>ᴩᴜʙʟɪsʜᴇᴅ ᴏɴ :</b> {3}\n侖 <b>ᴄʜᴀɴɴᴇʟ :</b> <a href={4}>{5}</a>\n\n<u><b>☉ sᴇᴀʀᴄʜ ᴩᴏᴡᴇʀᴇᴅ ʙʏ {6}</b></u>"
 
-help_1 : "ᴄʜᴏᴏsᴇ ᴛʜᴇ ᴄᴀᴛᴇɢᴏʀʏ ғᴏʀ ᴡʜɪᴄʜ ʏᴏᴜ ᴡᴀɴɴᴀ ɢᴇᴛ ʜᴇʟᴩ.\nᴀsᴋ ʏᴏᴜʀ ᴅᴏᴜʙᴛs ᴀᴛ <a href={0}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ</a>\n\nᴀʟʟ ᴄᴏᴍᴍᴀɴᴅs ᴄᴀɴ ʙᴇ ᴜsᴇᴅ ᴡɪᴛʜ : <code>/</code>"
+help_1 : "ᴄʜᴏᴏsᴇ ᴛʜᴇ ᴄᴀᴛᴇɢᴏʀʏ ғᴏʀ ᴡʜɪᴄʜ ʏᴏᴜ ᴡᴀɴɴᴀ ɢᴇᴛ ʜᴇʟᴩ.\n\nᴀsᴋ ʏᴏᴜʀ ᴅᴏᴜʙᴛs ᴀᴛ <a href={0}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ</a>\n\nᴀʟʟ ᴄᴏᴍᴍᴀɴᴅs ᴄᴀɴ ʙᴇ ᴜsᴇᴅ ᴡɪᴛʜ : <code>/</code>"
 help_2 : "ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴍʏ ʜᴇʟᴘ ᴍᴇɴᴜ ɪɴ ʏᴏᴜʀ ᴘᴍ."
 
 lang_1 : "» ᴘʟᴇᴀsᴇ ᴄʜᴏᴏsᴇ ᴛʜᴇ ʟᴀɴɢᴜᴀɢᴇ ᴡʜɪᴄʜ ʏᴏᴜ ᴡᴀɴɴᴀ sᴇᴛ ᴀs ᴛʜɪs ɢʀᴏᴜᴘ's ᴅᴇғᴀᴜʟᴛ ʟᴀɴɢᴜᴀɢᴇ :"
@@ -184,40 +184,40 @@ NEXT_PAGE: "🔘>"
 BACK_PAGE: "<🔘"
 
 
-S_B_1 : "❣️ 𝐀ᴅᴅ 𝐌ᴇ 𝐁ᴧʙʏ ❣️"
-S_B_2 : "🍁 𝐂𝐇𝐀𝐓 𝐆𝐏 🍁"
-S_B_3 : "🤫 ᴀᴅᴅ ᴍᴇ ʙᴀʙʏ 🤫"
-S_B_4 : "•─╼⃝𖠁 𝐇ᴇʟᴘ 𝐀иᴅ 𝐂ᴏᴍᴍᴧɴᴅs 𖠁⃝╾─•"
-S_B_5 : "𝙊𝙒𝙉𝙀𝙍😈࿐"
-S_B_6 : "🍁 𝐂𝐇𝐀𝐍𝐍𝐄𝐋 🍁"
+S_B_1 : " 𝐀ᴅᴅ 𝐌ᴇ 𝐁ᴧʙʏ "
+S_B_2 : " 𝐂𝐇𝐀𝐓 𝐆𝐏 🍁"
+S_B_3 : " ᴀᴅᴅ ᴍᴇ ʙᴀʙʏ "
+S_B_4 : "•ʜᴇʟᴘ ᴄᴏᴍᴍᴀɴᴅs•"
+S_B_5 : "ᴏᴡɴᴇʀ"
+S_B_6 : " 𝐂𝐇𝐀𝐍𝐍𝐄𝐋 "
 S_B_7 : "🍡 𝐒ᴏᴜꝛᴄᴇ 🍡"
-S_B_8 : "📺 𝐘ᴏᴜ-𝐓ᴜʙᴇ 📺"
-S_B_9 : "🥀 𝐆𝐑𝐎𝐔𝐏 🥀"
+S_B_8 : " 𝐘ᴏᴜ-𝐓ᴜʙᴇ "
+S_B_9 : " 𝐆𝐑𝐎𝐔𝐏 "
 
-H_B_1 : "🍭 𝐀ᴅᴍɪɴ 🍭"
-H_B_2 : "🍨 𝐀ᴜᴛʜ 🍨"
-H_B_3 : "🗼 𝐆-𝐂ᴧsᴛ 🗼"
-H_B_4 : "🧳 𝐁ʟ-𝐂ʜᴧᴛ 🧳"
-H_B_5 : "🔖 𝐁ʟ-𝐔sᴇʀs 🔖"
-H_B_6 : "🔘 𝐂-𝐏ʟᴧʏ 🔘"
-H_B_7 : "🚫 𝐆-𝐁ᴧɴ 🚫"
-H_B_8 : "▪️ 𝐋ᴏᴏᴘ ▪️"
-H_B_9 : "🎐 𝐋ᴏɢ 🎐"
-H_B_10 : "🏓 𝐏ɪɴɢ 🏓"
-H_B_11 : "🍷 𝐏ʟᴀʏ 🍷"
-H_B_12 : "🍥 𝐒ʜᴜғғɪʟᴇ 🍥"
-H_B_13 : "🐉 𝐒ᴇᴇᴋ 🐉"
-H_B_14 : "👒 𝐒ᴏɴɢ 👒"
-H_B_15 : "🚀 𝐒ᴘᴇᴇᴅ 🚀"
-H_B_16 : "🥂 𝐆ᴘᴛ 🥂"
-H_B_17 : "🍡 𝐒ᴛɪᴄᴋᴇʀ 🍡"
-H_B_18 : "❄️ 𝐓ᴧɢ-𝐀ʟʟ ❄️"
-H_B_19 : "✨ 𝐈ɴғᴏ ✨"
-H_B_20 : "🎓 𝐆ʀᴏᴜᴘ 🎓"
-H_B_21 : "🎫 𝐄xᴛʀᴧ 🎫"
-H_B_21 : "🕯️️ 𝐈ᴍᴧɢᴇ 🕯️"
-H_B_23 : "🎏 𝐀ᴄᴛɪᴏɴ 🎏"
-H_B_24 : "🎗️ ️𝐒ᴇᴧʀᴄʜ 🎗️"
+H_B_1 : " 𝐀ᴅᴍɪɴ "
+H_B_2 : " 𝐀ᴜᴛʜ "
+H_B_3 : " 𝐆-𝐂ᴧsᴛ "
+H_B_4 : " 𝐁ʟ-𝐂ʜᴧᴛ "
+H_B_5 : " 𝐁ʟ-𝐔sᴇʀs "
+H_B_6 : " 𝐂-𝐏ʟᴧʏ "
+H_B_7 : " 𝐆-𝐁ᴧɴ "
+H_B_8 : " 𝐋ᴏᴏᴘ "
+H_B_9 : " 𝐋ᴏɢ "
+H_B_10 : " 𝐏ɪɴɢ "
+H_B_11 : " 𝐏ʟᴀʏ "
+H_B_12 : " 𝐒ʜᴜғғɪʟᴇ "
+H_B_13 : " 𝐒ᴇᴇᴋ "
+H_B_14 : " 𝐒ᴏɴɢ "
+H_B_15 : " 𝐒ᴘᴇᴇᴅ "
+H_B_16 : " 𝐆ᴘᴛ "
+H_B_17 : " 𝐒ᴛɪᴄᴋᴇʀ "
+H_B_18 : " 𝐓ᴧɢ-𝐀ʟʟ "
+H_B_19 : " 𝐈ɴғᴏ "
+H_B_20 : " 𝐆ʀᴏᴜᴘ "
+H_B_21 : " 𝐄xᴛʀᴧ "
+H_B_21 : " 𝐈ᴍᴧɢᴇ "
+H_B_23 : " 𝐀ᴄᴛɪᴏɴ "
+H_B_24 : " ️𝐒ᴇᴧʀᴄʜ "
 
 P_B_1 : "𝐀ᴜᴅɪᴏ"
 P_B_2 : "𝐕ɪᴅᴇᴏ"
