--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "» ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "{0}🍹 ɪs ᴀʟɪᴠᴇ .\n\n<b>🕸️ ᴜᴘᴛɪᴍᴇ :</b> {1}"
-start_2 : "нєу {0},\n\n๏ ᴛʜɪs ɪs {1} !\n\n⚡️ ꜱᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs ᴀʀᴇ\n━━━━━━━━━━━━━━━━𓆩𔘓⃭𓆪\n━━━━━━━━━━━\n ◆ ʏᴏᴜ ᴄᴀɴ ᴘʟᴀʏ ꜱᴏɴɢꜱ ɪɴ ᴠᴏɪᴄᴇ ᴄʜᴀᴛ.\n ◆ ʏᴏᴜ ᴄᴀɴ ɢᴇɴᴇʀᴀᴛᴏʀ ɪᴍᴀɢᴇs.\n ◆ ʏᴏᴜ ᴄᴀɴ ᴛʀᴀɴꜱʟᴀᴛᴇ ᴍᴜʟᴛɪᴘʟᴇ ʟᴀɴɢᴜᴀɢᴇꜱ.\n ◆ ɪ ᴄᴀɴ ᴍᴜᴛᴇ,ᴜɴᴍᴜᴛᴇ,ʙᴀɴ,ᴜɴʙᴀɴ,ᴋɪᴄᴋ..\n ◆ ꜱᴘᴇᴄɪᴀʟ ᴡᴇʟᴄᴏᴍᴇ\n ◆ ᴍᴏʀᴇ ғᴇᴀᴛᴜʀᴇs ᴄʟɪᴄᴋ\nᴄᴏᴍᴍᴀɴᴅs ʙᴜᴛᴛᴏɴ...\n \n ➻ ᴀ ғᴀsᴛ & ᴘᴏᴡᴇʀғᴜʟ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ ʙᴏᴛ ᴡɪᴛʜ sᴏᴍᴇ ᴀᴡᴇsᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs.\n\n● ᴘʏᴛʜᴏɴ ➥ 3.10.11\n● ᴘʏʀᴏɢʀᴀᴍ ➥ 2.0.106\n● ᴘʏ-ᴛɢᴄᴀʟʟs ➥ 0.9.7\n\nSᴜᴘᴘᴏʀᴛᴇᴅ Pʟᴀᴛғᴏʀᴍs : ʏᴏᴜᴛᴜʙᴇ, sᴘᴏᴛɪғʏ, ʀᴇssᴏ, ᴀᴘᴘʟᴇ ᴍᴜsɪᴄ ᴀɴᴅ sᴏᴜɴᴅᴄʟᴏᴜᴅ.\n━━━━━━━━━━━\n━━━━━━━━━━━━━━━━𓆩𔘓⃭𓆪\n๏ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀʙᴏᴜᴛ ᴍʏ ᴍᴏᴅᴜʟᴇs ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs.  [𝐂ʟɪᴄᴋ 𝐇ᴇʀᴇ](https://t.me/itz_ind_coder) ♡\n"
+start_2 : "нєу {0},\n\n๏ ᴛʜɪs ɪs {1} !\n\n⚡️ ꜱᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs ᴀʀᴇ\n━━━━━━━━━━━━━━━━𓆩𔘓⃭𓆪\n━━━━━━━━━━━\n ◆ ʏᴏᴜ ᴄᴀɴ ᴘʟᴀʏ ꜱᴏɴɢꜱ ɪɴ ᴠᴏɪᴄᴇ ᴄʜᴀᴛ.\n ◆ ʏᴏᴜ ᴄᴀɴ ɢᴇɴᴇʀᴀᴛᴏʀ ɪᴍᴀɢᴇs.\n ◆ ʏᴏᴜ ᴄᴀɴ ᴛʀᴀɴꜱʟᴀᴛᴇ ᴍᴜʟᴛɪᴘʟᴇ ʟᴀɴɢᴜᴀɢᴇꜱ.\n ◆ ɪ ᴄᴀɴ ᴍᴜᴛᴇ,ᴜɴᴍᴜᴛᴇ,ʙᴀɴ,ᴜɴʙᴀɴ,ᴋɪᴄᴋ..\n ◆ ꜱᴘᴇᴄɪᴀʟ ᴡᴇʟᴄᴏᴍᴇ\n ◆ ᴍᴏʀᴇ ғᴇᴀᴛᴜʀᴇs ᴄʟɪᴄᴋ\nᴄᴏᴍᴍᴀɴᴅs ʙᴜᴛᴛᴏɴ...\n \n ➻ ᴀ ғᴀsᴛ & ᴘᴏᴡᴇʀғᴜʟ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ ʙᴏᴛ ᴡɪᴛʜ sᴏᴍᴇ ᴀᴡᴇsᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs.\n\n● ᴘʏᴛʜᴏɴ ➥ 3.10.11\n● ᴘʏʀᴏɢʀᴀᴍ ➥ 2.0.106\n● ᴘʏ-ᴛɢᴄᴀʟʟs ➥ 0.9.7\n\nSᴜᴘᴘᴏʀᴛᴇᴅ Pʟᴀᴛғᴏʀᴍs : ʏᴏᴜᴛᴜʙᴇ, sᴘᴏᴛɪғʏ, ʀᴇssᴏ, ᴀᴘᴘʟᴇ ᴍᴜsɪᴄ ᴀɴᴅ sᴏᴜɴᴅᴄʟᴏᴜᴅ.\n━━━━━━━━━━━\n━━━━━━━━━━━━━━━━𓆩𔘓⃭𓆪\n๏ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀʙᴏᴜᴛ ᴍʏ ᴍᴏᴅᴜʟᴇs ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs. ♡\n"
 start_3 : "𝐇ᴇʏ {0},\n𝐓ʜɪs 𝐈s {1}\n\n𝐓ʜᴀɴᴋs 𝐅ᴏʀ 𝐀ᴅᴅɪɴɢ 𝐌ᴇ 𝐈ɴ {2}, {3} 𝐂ᴀɴ 𝐍ᴏᴡ 𝐏ʟᴀʏ 𝐒ᴏɴɢs 𝐈ɴ 𝐓ʜɪs 𝐂ʜᴀᴛ."
 start_4 : "🎄 <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> 🎄\n\nᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ.\n\n<b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "<b>↝ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴀᴛ ɪs ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴀᴛᴀʙᴀsᴇ.\nʀᴇǫᴜᴇsᴛ ᴀ <a href={1}>sᴜᴅᴏ ᴜsᴇʀ</a> ᴛᴏ ᴜɴʙʟᴀᴄᴋʟɪsᴛ ʏᴏᴜʀ ᴄʜᴀᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ.</a>"
@@ -185,12 +185,12 @@ BACK_PAGE: "<🔘"
 
 
 S_B_1 : " 𝐀ᴅᴅ 𝐌ᴇ 𝐁ᴧʙʏ "
-S_B_2 : " 𝐂𝐇𝐀𝐓 𝐆𝐏 🍁"
+S_B_2 : " 𝐂𝐇𝐀𝐓 𝐆𝐏 "
 S_B_3 : " ᴀᴅᴅ ᴍᴇ ʙᴀʙʏ "
 S_B_4 : "•ʜᴇʟᴘ ᴄᴏᴍᴍᴀɴᴅs•"
 S_B_5 : "ᴏᴡɴᴇʀ"
 S_B_6 : " 𝐂𝐇𝐀𝐍𝐍𝐄𝐋 "
-S_B_7 : "🍡 𝐒ᴏᴜꝛᴄᴇ 🍡"
+S_B_7 : " 𝐒ᴏᴜꝛᴄᴇ "
 S_B_8 : " 𝐘ᴏᴜ-𝐓ᴜʙᴇ "
 S_B_9 : " 𝐆𝐑𝐎𝐔𝐏 "
 
